--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Барбершоп «Бородинский»</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo">
-                    <img src="img/logo.png" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+                    <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
                 </a>
                 <ul class="site-navigation">
                     <li>
