--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Барбершоп «Бородинский»</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <header class="main-header">
             <nav class="main-navigation">
                 <a class="main-header-logo">
-                    <img src="img/logo.png" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+                    <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
                 </a>
                 <ul class="site-navigation">
                     <li>
@@ -104,10 +105,10 @@
                                 <img src="img/img-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
                             </a>
                         </p>
-                        <h3>
+                        <h3 class="catalog-item-title">
                             <a href="catalog-item.html">
                                 <span class="catalog-category">Набор для путешествий</span>
-                                <span class="catalog-item-title">«Baxter of California»</span>
+                                <span class="catalog-item-name">«Baxter of California»</span>
                             </a>
                         </h3>
                         <div class="catalog-item-price">
@@ -121,10 +122,10 @@
                                 <img src="img/img-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
                             </a>
                         </p>
-                        <h3>
+                        <h3 class="catalog-item-title">
                             <a href="catalog-item.html">
                                 <span class="catalog-category">Увлажняющий кондиционер</span>
-                                <span class="catalog-item-title">«Baxter of California»</span>
+                                <span class="catalog-item-name">«Baxter of California»</span>
                             </a>
                         </h3>
                         <div class="catalog-item-price">
@@ -138,10 +139,10 @@
                                 <img src="img/img-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
                             </a>
                         </p>
-                        <h3>
+                        <h3 class="catalog-item-title">
                             <a href="catalog-item.html">
                                 <span class="catalog-category">Гель для волос</span>
-                                <span class="catalog-item-title">«Suavecito»</span>
+                                <span class="catalog-item-name">«Suavecito»</span>
                             </a>
                         </h3>
                         <div class="catalog-item-price">
@@ -155,10 +156,10 @@
                                 <img src="img/img-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
                             </a>
                         </p>
-                        <h3>
+                        <h3 class="catalog-item-title">
                             <a href="catalog-item.html">
                                 <span class="catalog-category">Глина для укладки волос</span>
-                                <span class="catalog-item-title">«American crew»</span>
+                                <span class="catalog-item-name">«American crew»</span>
                             </a>
                         </h3>
                         <div class="catalog-item-price">
@@ -172,10 +173,10 @@
                                 <img src="img/img-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
                             </a>
                         </p>
-                        <h3>
+                        <h3 class="catalog-item-title">
                             <a href="catalog-item.html">
                                 <span class="catalog-category">Гель для волос</span>
-                                <span class="catalog-item-title">«American crew»</span>
+                                <span class="catalog-item-name">«American crew»</span>
                             </a>
                         </h3>
                         <div class="catalog-item-price">
@@ -189,10 +190,10 @@
                                 <img src="img/img-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
                             </a>
                         </p>
-                        <h3>
+                        <h3 class="catalog-item-title">
                             <a href="catalog-item.html">
                                 <span class="catalog-category">Набор для бритья</span>
-                                <span class="catalog-item-title">«Baxter of California»</span>
+                                <span class="catalog-item-name">«Baxter of California»</span>
                             </a>
                         </h3>
                         <div class="catalog-item-price">
